# rehabilitation_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  questions.sqlite3  requirements.txt  setup.cfg  test.py
.github/workflows/: rehabilitation_bot.yml
alembic/: env.py
alembic/versions/: 00b705dcce95_relationship.py  20e73d882f3c_first_migration.py  3cade9be208e_removed_spam_table.py  40f2f23bb732_spam_ml_data_table.py  4170a9f8ba51_obscene_table.py  619a16b88e80_relationship.py  763f393456ac_relationship.py  79afeb697c1e_relationship.py  8e5e76d0cf18_rename_tables.py  9776370711c2_relationship.py  a44e81df0712_clr_history.py  c60d3e5f6a74_utcnow_default_date_timestamp.py  d0ff87fd6f69_first_migration.py  e3088a21e432_first_migration.py  ead96d0b356e_relationship.py  ee0731b3b11b_relationship.py
infra/: Dockerfile  docker-compose.yaml  docker-compose.yml
src/: application.py  neural_network.py
src/bot/: forbidden_words.json  handlers.py  models.py  obscene_words.py  utils.py
src/bot/constants/: button.py  callback.py  choices.py  filter.py  key.py  models.py  state.py
src/bot/constants/info/: main_menu.py  menu.py  question.py  text.py
src/bot/conversations/: form_application.py  main_application.py  menu_application.py  moderation_application.py
src/bot/core/: database.py  logger.py  settings.py
src/bot/core/db/: alembic.ini  base.py  crud.py  models.py  schemas.py  sqlite.db
src/bot/core/db/alembic/: env.py
src/bot/core/db/alembic/versions/: 3cade9be208e_removed_spam_table.py  40f2f23bb732_spam_ml_data_table.py  4170a9f8ba51_obscene_table.py  441b36d92b55_first_migration.py  a44e81df0712_clr_history.py
src/bot/core/db/data/: obscene_data.json  spam_data.csv
src/bot/fastapi_admin/: config.py  main.py  models_db.py  schemas.py  tasks.py
src/bot/fastapi_admin/db/: base.py
