[tool.poetry]
name = "rehabilitation-bot"
version = "0.1.0"
description = "Telegram bot of the rehabilitation community at the Konstantin Khabensky Foundation"
authors = [
    "Юлий Митряшкин", "Яна Денисова",
    "Никита Викторов", "Алексей Соловьев", "Марк Марузов"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
poetry = "^1.4.2"
pydantic = "^1.10.7"
python-telegram-bot = "^20.2"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
python-dotenv = "0.20.0"
pre-commit = "^3.2.2"
autopep8 = "2.0.2"
add-trailing-comma = "2.4.0"
mypy = "1.2.0"
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
